--- a/index.html
+++ b/index.html
@@ -8,44 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="notes">
-        <div class="notes__sidebar">
-            <div class="notes__logo">
-                <h2>Note App</h2>
-            </div>
-
-            <div class="notes__list">
-                <div class="notes__item">
-                    <div class="notes__title">New note</div>
-                    <div class="notes__body">javascript course</div>
-                    <div class="notes__date">Monday 12:30 PM</div>
-                </div>
-
-                <div class="notes__item notes__item-selected">
-                    <div class="notes__title">New note</div>
-                    <div class="notes__body">javascript course</div>
-                    <div class="notes__date">Monday 12:30 PM</div>
-                </div>
-
-                <div class="notes__item">
-                    <div class="notes__title">New note</div>
-                    <div class="notes__body">javascript course</div>
-                    <div class="notes__date">Monday 12:30 PM</div>
-                </div>
-                <div class="notes__item">
-                    <div class="notes__title">New note</div>
-                    <div class="notes__body">javascript course</div>
-                    <div class="notes__date">Monday 12:30 PM</div>
-                </div>
-            </div>
-
-            <button class="notes__add">Add Note</button>
-        </div>
-
-        <form class="note__preview">
-            <input class="note__input" type="text" placeholder="add subject ...">
-            <textarea class="note__textarea" name="content" id="content" placeholder="add description"></textarea>
-        </form>
+    <div class="notes" id="root">
+        
     </div>
+
+    <script src="./js/main.js" type="module"></script>
 </body>
 </html>
