create upadeteNoteList class and createListItemHTML class

--- a/index.html
+++ b/index.html
@@ -9,7 +9,26 @@
 </head>
 <body>
     <div class="notes" id="root">
-        
+        <!-- <div class="notes__sidebar">
+            <div class="notes__logo">
+                <h2>Note App</h2>
+            </div>
+
+            <div class="notes__list">
+                <div class="notes__item">
+                    <div class="notes__title">New note</div>
+                    <div class="notes__body">javascript course</div>
+                    <div class="notes__date">Monday 12:30 PM</div>
+                </div>
+            </div>
+
+            <button class="notes__add">Add Note</button>
+        </div>
+
+        <form class="note__preview">
+            <input class="note__input" type="text" placeholder="add subject ...">
+            <textarea class="note__textarea" name="content" id="content" placeholder="add description"></textarea>
+        </form> -->
     </div>
 
     <script src="./js/main.js" type="module"></script>
